Fixed up extra padding on header/footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
   color: $foreground-color;
   background: #ccc;
-  padding: $xx-small-unit;
+  padding: $xx-small-unit 0;
 }
